Styles/styles.css
*{
    font-family: 'Poppins', sans-serif;
}
:root{
    --primary-color:#3A3A3A;
}

/*-----------------
   Header Styles
-----------------*/
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 50px 110px;
    
}
.header-title{
    text-align: center;
    color: var(--primary-color);
    font-weight: 700;
    font-size: 24px;
    margin-right: 50px;
}
.nav{
    padding: 20px 20px;
    margin-left: 100px;
}
a{
    text-decoration: none;
    color: var(--primary-color);
    padding: 16px;
}

/* First-Section styles
------------------------*/
.journey-cam{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px;
}
.journey{
    text-align: left;
    margin-right: 50px;
    margin-left: 80px;
}
.journey-title{
    font-weight: 700;
    font-size: 52px;
    color: var(--primary-color);
    margin-bottom: 16px;

}
.journey-desc{
    color: var(--primary-color);
    font-size: 16px;
    font-weight: 600;
    margin-right: 40px;
}
.btn-preebook{
    background: #E02C6D;
    padding: 10px 24px;
    border-radius: 41px;
    color: #FFFFFF;
    border: none;
}
.fa-arrow{
    color: #FFFFFF;
}
.camera{
    text-align: right;
    background-image: url(../images/Circle\ design.svg);
    background-repeat: no-repeat;
    margin: 50px 40px 50px 0px;
    padding: 30px;

}
/* Second-Section-Styles */
.companies{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 40px;
    margin-top: 50px;
    margin-bottom: 100px;
}

/* Third-Section-Styles */
.article-name{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 30px;
    font-size: 28px;
    font-weight: 600;
    color: var(--primary-color);
}
.collections{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-row-gap: 20px;
    justify-content: center;
    margin: 0 200px;

}
.collection{
    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
    border-radius: 5px;
    padding: 14px;
    margin: 15px;
}
.collection-title{
    color: #18191F;
    font-weight: 500;
    font-size: 28px;
    margin-bottom: 6px;
}
.price{
    color: rgba(0, 0, 0, 0.87);
    font-weight: 400;
    font-size: 24px;
    margin-top: 0;
    margin-bottom: 0;
}
.fa-star, .fa-star-half-stroke{
    color: #FB8200;
    margin-top: 0;
}
.collection-desc{
    color: #787885;
    margin-top: 0;
    margin-bottom: 0;
}
.more{
    color: #E02C6D;
    border: none;
    display: flex;
    justify-content: right;
    align-items: center;
    margin-right: 150px;
}
.fa-arrow-right{
    color: #E02C6D;
    padding-left: 2px;
}
/*-----------------------
  Fourth-section-Styles
-------------------------*/
.gear-products{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 150px;

}
.gear-image{
 margin-left: 100px;
}
.product-info{
    align-items: center;
    margin:0 100px 50px;
}
.product-info-title{
    color: #0A0826;
    font-weight: 700;
    font-size: 38px;
}
.product-info-desc{
    font-weight: 700;
    font-size: 16px;
    color: #6C6C6C;
    margin-right: 150px;
}
.btn-join{
    color:#FFFFFF;
    background-color: #E02C6D;
    border: none;
    padding: 10px 24px;
}
/* Footer Styles */
.footer{
    background-color: #0A0826;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 50px 100px 37px;
    margin-top: 100px;
}
.footer-title{
    color: #FFFFFF;
    font-weight: 700;
    font-size: 24px;
    padding: 0;
    margin: 0;
}
.footer-desc{
    color: #D9DBE1;;
    font-weight: 700;
    font-size: 14px;
}
.social-logos{
    display: flex;
    justify-content: center;
    gap: 10px;
    
}
.fa-square-instagram, .fa-dribbble, .fa-twitter, .fa-youtube{
    color: #FFFFFF;
    background-color: #3A3A3A;
    padding: 10px;
    border-radius: 20px;
}

